<resources>
    <string name="app_name">Important Documents</string>
    <string name="register">Registration</string>
    <string name="_998">+998-##-###-##-##</string>

    <string name="continue1">Continue</string>
    <string name="login">Login</string>
    <string name="confirm_otp">passwordConfirmation</string>
    <string name="welcome_txt">Welcome\n to the application</string>
    <string name="auth_txt">Authorization</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="password">Password</string>
    <string name="info_pass1">At Least 6 Characters</string>
    <string name="info_pass2">Minimum 3 Letters</string>
    <string name="info_pass3">Minimum 3 Digits</string>
    <string name="register_info">If you are already registered,\n you can simply Login to the application</string>
    <string name="info_pass4">At least one capital letter</string>
    <string name="rewrite_pass">Repeat password</string>
    <string name="next">Next</string>
    <string name="enter_code">Write the code</string>
    <string name="info_otp">Your confirmation code has been sent to +998935990005..</string>
    <string name="time">Left</string>
    <string name="checkOtp">Confirm</string>
    <string name="underlin_txt"><u>Click here..</u>.</string>
    <string name="dont_have_code">If the code did not arrive,</string>
    <string name="success_verify">Registration was successful !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_title">Check Code</string>
    <string name="otp_des">Please enter the code you sent to\n</string>
    <string name="resend_otp_title">Resend the code via</string>
    <string name="success_otp_btn_title">Confirm</string>
    <string name="no_connection_title">No Connection</string>
    <string name="no_connection_des">No network connection, check your network settings or try again!</string>
    <string name="try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="fav">Favorite</string>
    <string name="logo">Logo</string>
    <string name="search_file">Search File</string>
    <string name="search_folder">Search Folder</string>
    <string name="add_file">Add File</string>
    <string name="add_folder">Add Folder</string>
    <string name="choose_add_type">Choose Add Type</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="choose_folder">Choose Folder</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="upload_img">Upload Img</string>
    <string name="upload_doc">Document</string>
    <string name="choose_upload_type">Choose Upload Type</string>
    <string name="add">Add</string>
</resources>