<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#064575"
        android:elevation="@dimen/_10sdp"
        android:progressTint="#064575"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_34sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Logo"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/welcome_txt"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/app_name"
            android:textColor="@color/white_and_black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/auth_txt"
        android:textColor="@color/white_and_black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <FrameLayout
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/phone_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit"
            android:hint="@string/_998"
            android:inputType="phone"
            android:paddingStart="@dimen/_54sdp"
            android:textColorHint="#787171"
            android:textSize="@dimen/_12sdp"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_user_name"
            app:mask="@string/_998" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/login_start_menu" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6sdp"
                android:background="@color/colorGray" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit"
            android:hint="@string/password"
            android:paddingStart="@dimen/_54sdp"
            android:textColorHint="#a4a4a4"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/lock_auth" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_gravity="center_vertical"

                android:layout_marginStart="@dimen/_6sdp"
                android:background="@color/colorGray" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/forgot_password"
        android:textColor="#a4a4a4"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginClick"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginLeft="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_44sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        android:text="@string/continue1"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:backgroundTint="@color/white_and_black"
        app:cornerRadius="@dimen/_7sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/regiserScreenOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"

        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/register"
        android:textColor="@color/airplane_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginClick" />
</androidx.constraintlayout.widget.ConstraintLayout>