<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background">

    <TextView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="Logo"
        android:textSize="@dimen/_24sdp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/_25sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/register"
        android:textColor="@color/white_and_black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <!-- TextInputLayout with MaskedEditText for phone number -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:prefixText="+998"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="+998 91 111 11 11"

            android:inputType="phone"
            android:textColorHint="#787171"
            android:textSize="@dimen/_13sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clickRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginLeft="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_26sdp"
        android:clickable="false"
        android:layout_marginBottom="@dimen/_80sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/continue1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAllCaps="false"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/registerProgress"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/clickRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clickRegister" />

    <TextView
        android:id="@+id/openLoginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/register_info"
        android:textColor="#A4A4A4"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
