<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_map_type"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_30sdp">

    <View
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/shape_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_upload_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <FrameLayout
            android:id="@+id/button_close"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_gravity="center"
                android:alpha=".8"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/icon_xmark"
                app:tint="@color/white_and_black" />
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/choose_img_option"
            android:layout_width="0dp"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/card_background"
            tools:ignore="DuplicateIds">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_ic"
                app:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/card_intro_color"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_img"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/choose_pdf"
            android:layout_width="0dp"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/card_background">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/pdf_ic"
                app:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/card_intro_color"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/upload_pdf"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/choose_doc"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/card_background">


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/file_ic"
                app:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/card_intro_color"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/upload_doc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>